--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,9 +15,31 @@
   <div class="main-wrapper">
     <div class="container">
       <header class="chat-header">
-        <h1>Gemini Assistant</h1>
+        <div class="header-content">
+          <h1>Gemini Assistant</h1>
+          <button id="settings-toggle" class="settings-btn" title="Settings">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <circle cx="12" cy="12" r="3"></circle>
+              <path
+                d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z">
+              </path>
+            </svg>
+          </button>
+        </div>
         <p>Ask me anything...</p>
       </header>
+
+      <div id="settings-panel" class="settings-panel hidden">
+        <label for="system-instruction">Reference Role / System Instruction</label>
+        <textarea id="system-instruction" placeholder="Example: You are a friendly cooking expert..."
+          rows="3"></textarea>
+
+        <div class="slider-container">
+          <label for="temperature">Creativity (Temperature): <span id="temp-value">0.9</span></label>
+          <input type="range" id="temperature" min="0" max="2" step="0.1" value="0.9">
+        </div>
+      </div>
       <div id="chat-box" class="chat-box"></div>
       <form id="chat-form" class="chat-input-area">
         <input type="text" id="user-input" placeholder="Type a message..." autocomplete="off" required />
